# ProjectChronos

./: .gitignore  README.md  chronos_dbg.txt  chronos_v9.txt
ProjectChronos/: CMakeLists.txt  build.bat  build_driver.bat  setup_testsigning.bat
ProjectChronos/driver/: driver.cpp  driver.h
ProjectChronos/drivers/: gdrv.sys
ProjectChronos/kdmapper/: kdmapper.cpp  kdmapper.h
ProjectChronos/scripts/: disable_testing.bat  enable_testing.bat  fetch_offsets.ps1
ProjectChronos/src/: chronos_drv.rc  main.cpp
ProjectChronos/src/aimbot/: aim_controller.cpp  aim_controller.h  autowall.cpp  autowall.h  quantum_aim.cpp  quantum_aim.h  ragebot.cpp  ragebot.h  resolver.cpp  resolver.h
ProjectChronos/src/core/: config.cpp  config.h  memory_reader.cpp  memory_reader.h  offset_manager.cpp  offset_manager.h  offsets.h  state_engine.cpp  state_engine.h  types.h
ProjectChronos/src/exploits/: executor.cpp  executor.h  exploit_selector.cpp  exploit_selector.h  input_history.cpp  input_history.h  packet_engine.cpp  packet_engine.h  prediction.cpp  prediction.h  skinchanger.cpp  skinchanger.h
ProjectChronos/src/nade/: nade_engine.cpp  nade_engine.h
ProjectChronos/src/overlay/: imgui_setup.cpp  imgui_setup.h  menu.cpp  overlay.cpp  overlay.h  render.cpp
ProjectChronos/src/safety/: adaptive_difficulty.cpp  adaptive_difficulty.h  antidump.cpp  antidump.h  failure_response.cpp  failure_response.h  hwid_spoofer.cpp  hwid_spoofer.h  obfuscation.cpp  obfuscation.h  vac_shield.cpp  vac_shield.h
ProjectChronos/src/utils/: logging.cpp  logging.h  math.cpp  math.h
ProjectChronos/test_min/: min_drv.c  minimal.c
ProjectChronos/tests/: test_exploits.cpp
